# mcp-server-firebird

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README_i18n.md  build.sh  claude_desktop_config.json  config.env  create-release.sh  docker-compose.yml  docker-entrypoint.sh  firebird-diagnostics.py  packages.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  server.py  setup.sh  supervisord.conf  test-connection.py  test-connectivity.py  test-docker-structure.sh  test-helper.sh  test_i18n.sh  test_runner.py
.github/workflows/: docker-image.yml  docker-set-tag.yml  release-create.yml  release-hotfix.yml  submodules-check.yml  tests.yml
docs/: ARCHITECTURE.md  FIX_I18N_ERROR.md  I18N_PROMPTS_FIX.md  TESTING.md
examples/: modular_usage.py
i18n/: en_US.json  pt_BR.json
scripts/: run-tests.sh  setup-dev.sh
src/: README.md  __init__.py
src/core/: __init__.py  config.py  i18n.py
src/firebird/: __init__.py  analyzer.py  server.py
src/mcp/: __init__.py  server.py
src/prompts/: __init__.py  generator.py  manager.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  docker-compose-test.yml  test_firebird_integration.py  test_i18n_prompts.py  test_mcp_integration.py
tests/unit/: __init__.py  test_firebird_server.py  test_i18n.py  test_mcp_server.py  test_performance.py  test_prompt_system.py  test_schema_prompts.py  test_sql_analyzer.py
